# RAG-finance-bot-project

./: .env.example  .gitignore  README.md  architecture.md  context.md  docker-compose.yml  edge-case.md  evals.md  implementation-plan.md  pyproject.toml  requirements.txt  sample_qa.md  source_list.md
corpus/: FAQs.md  TotalExpenseRatioJun2026.csv
diagnostics/: METABASE_SETUP.md  README.md  aggregate_thumbs_down_by_failure_mode.sql  operational_health_summary.sql  thumbs_down_review.sql
docs/: EVAL_SUITE_BRIEF.md  interview_script.md
prompts/: system_prompt.md
scripts/: _docker_python_env.sh  apply_migrations.py  ask.py  audit_failed_urls.py  cleanup_expired_sessions.py  debug_citation_trace.py  diag.py  diagnose_chat_timing.py  docker_volumes.ps1  download_bge_model.py  ingest.py  operational_health_report.py  pull_flexicap_query_logs.py  reconcile_is_latest.py  repro_mutual_funds_ask.py  repro_mutual_funds_chat.py  retrieve.py  retry_embed.py  run_citation_consistency.py  run_docker_verify_bge.ps1  run_download_bge.sh  run_eval_suite.py  run_grounding_sweep.py  run_local_ingest.sh  run_no_performance_eval.py  run_partial_ingest.sh  run_verify_bge_only.sh  sample_answer_quality_answers.py  stage_parsed_text.py  trace_serial_first_call.py  trace_serial_regen_rate.py  verify_anthropic.py  verify_migrations.py  verify_phase0.ps1  verify_phase0.py
templates/: learnings_document_disclaimer.md  ui_disclaimer_snippet.md
tests/: test_chat_errors.py  test_citations.py  test_clarification.py  test_combined_factsheet.py  test_diagnostics_discovery.py  test_expansion.py  (+11 more)
(+95 files in other folders)
