[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-bot"
version = "0.1.0"
description = "ICICI Prudential RAG Mutual Fund FAQ Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.0",
    "certifi>=2024.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tiktoken>=0.8.0",
    "sentence-transformers>=3.0.0",
    "fpdf2>=2.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
